# TB_representative_data_W2CAD_to_RFA

./: .gitignore  LICENSE  README.md  pyproject.toml
TB_Representative_data_W2CAD_to_RFA/: W2Parser.py
bidmc_py/: W2Parser.py
references/: 6 MV_Open_PDD_sorted.ASC  IBA_Example_ASCII_Format.asc
references/TB_RepresentativeData_Eclipse/: 10MV Beam Data.xlsx  15MV Beam Data.xlsx  4MV Beam Data.xlsx  6FFF Beam Data.xlsx  6MV Beam Data.xlsx  8MV Beam Data.xlsx  Electron Beam Data.xlsx
rfa_W2CAD/10FFF/: 10X FFF_Open_PDD_sorted_rfa.ASC  10X FFF_Open_PRF_sorted_rfa.ASC  10X_FFF_Open_Diag_sorted_rfa.ASC
rfa_W2CAD/10MV/: 10MV_Open_Diag_sorted_rfa.ASC  10MV_Open_PDD_sorted_rfa.ASC  10MV_Open_PRF_sorted_rfa.ASC
rfa_W2CAD/10MV/15/: 10MV_W15U_LNG_sorted_rfa.ASC  10MV_W15U_PDD_sorted_rfa.ASC  10MV_W15U_PRF_sorted_rfa.ASC  10MV_W15U_SSD120_PDD_sorted_rfa.ASC  10MV_W15U_SSD80_PDD_sorted_rfa.ASC
rfa_W2CAD/10MV/30/: 10MV_W30U_LNG_sorted_rfa.ASC  10MV_W30U_PDD_sorted_rfa.ASC  10MV_W30U_PRF_sorted_rfa.ASC  10MV_W30U_SSD120_PDD_sorted_rfa.ASC  10MV_W30U_SSD80_PDD_sorted_rfa.ASC
rfa_W2CAD/10MV/45/: 10MV_W45U_LNG_sorted_rfa.ASC  (+4 more)
rfa_W2CAD/15MV/: 15MV_Open_Diag_sorted_rfa.ASC  15MV_Open_PDD_sorted_rfa.ASC  15MV_Open_PRF_sorted_rfa.ASC
rfa_W2CAD/4X/: Open_Diag_sorted_rfa.ASC  Open_PDD_sorted_rfa.ASC  Open_PRF_sorted_rfa.ASC
rfa_W2CAD/6FFF/: 6X FFFOpen_Diag_sorted_rfa.ASC  6X FFFOpen_PDD_sorted_rfa.ASC  6X FFFOpen_PRF_sorted_rfa.ASC
rfa_W2CAD/6MV/: 6 MV_Open_Diag_sorted_rfa.ASC  6 MV_Open_PDD_sorted_rfa.ASC  6 MV_Open_PRF_sorted_rfa.ASC
rfa_W2CAD/8X/: Open_Diag_sorted_rfa.ASC  Open_PDD_sorted_rfa.ASC  Open_PRF_sorted_rfa.ASC
rfa_W2CAD/GGPB/: 06MeV_15x15_BlockPdd_rfa.ASC  09MeV_15x15_BlockPdd_rfa.ASC  12MeV_15x15_BlockPdd_rfa.ASC  15MeV_15x15_BlockPdd_rfa.ASC  16MeV_15x15_BlockPdd_rfa.ASC  16MeV_15x15_rfa.ASC  18MeV_15x15_BlockPdd_rfa.ASC  18MeV_15x15_rfa.ASC  20MeV_15x15_BlockPdd_rfa.ASC  22MeV_15x15_BlockPdd_rfa.ASC
(+401 files in other folders)
