[tool.poetry]
name = "tb_representative_beam_converter"
version = "0.1.0"
description = "Varian TB Representative Beam Converter"
authors = ["mf"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.production.dependencies]
pydicom = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"
ipython = "^8.14.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
